--- a/a2.html
+++ b/a2.html
@@ -3,9 +3,33 @@
 <HTML>
     <HEAD>
         <link rel="stylesheet" type="text/css" href="a2.css" />
+        <script language="javascript" type="text/javascript" src="a2.js"></script>
     </HEAD>
     <BODY>
-        <canvas id="gameView" width="400" height="650" style="border:1px solid #c3c3c3;">
+        <div id="startView">
+            <table>
+                <tr>
+                    <td>Level:</td>
+                    <td>
+                        <input id="level1" type="radio" name="levelSelect" value="level1"></input>
+                    </td>
+                    <td>
+                        <input id="level2" type="radio" name="levelSelect" value="level2"></input>
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>1</td>
+                    <td>2</td>
+                </tr>
+            </table>
+            <br/>
+            <P id="score">
+                High Score: <span id="scoreCounter">0</span>
+            </P>
+            <br/>
+            <button type="button" id="start" onclick="startGame()">Start
+            </button>
+        </div>
     </BODY>
-    <script src="a2.js" type="text/javascript"></script>
 </HTML>
