--- a/a2.html
+++ b/a2.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="a2.css" />
         <script language="javascript" type="text/javascript" src="a2.js"></script>
     </HEAD>
-    <BODY>
+    <BODY onload="scoreCounter()">
         <div id="startView">
             <table>
                 <tr>
