--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
 
         </canvas>
 
-        <canvas id="gameView" > 
+        <canvas id="gameView" width="400px" height="600px"> 
 
             
         </canvas>
